# usiem-apache-httpd

./: Cargo.toml  README.md
.github/workflows/: rust.yml
docker/v2/: Dockerfile  entrypoint.sh  httpd.conf  modsecurity.conf
docker/v2/public-html/: xss.html
docker/v3/: Dockerfile  build.sh  crs-setup.conf  httpd.conf  modsecurity.conf
docker/v3/public-html/: index.html
logs/: modsec_audit.jsonl
src/parsers/: mod.rs
src/parsers/apache2/: mod.rs
src/parsers/modsecurity/: mod.rs  modsec.rs
tests/: integration.rs
