[package]
name = "u-siem-apache2"
version = "0.0.8"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "Library to be used to build a custom SIEM with the framework uSIEM"
repository = "https://github.com/u-siem/usiem-apache-httpd "
keywords = ["SIEM", "security", "logs","paloalto","firewall"]
categories = ["security"]
edition = "2018"

[lib]
name = "usiem_apache2"
path = "src/lib.rs"

[dev-dependencies]
reqwest = {version = "0.10.8", features = ["blocking"]}

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
u-siem = {version = "0.0"}
chrono = "0.4"